# tetris

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md
Release/: makefile  sources.mk
Release/src/: subdir.mk
Release/src/renderingengine/: subdir.mk
src/: falling.h  gameboard.h  main.cpp  main_auxiliary.h  main_auxiliary.hpp  shapes.h  types.h
src/renderingengine/: renderingengine.cpp  renderingengine.h
src/tetris/: falling.cpp  falling.h  gameboard.h  gameboard.hpp  shapes.cpp  shapes.h  types.cpp  types.h
